# mail-actions

./: .gitignore  Makefile  README.md  auth.py  mail_actions.py  pyproject.toml  rule_engine.py  ruleengine.py  ruleparser.py  schema.json  test_ruleengine.py  test_ruleparser.py
gmail/: mailbox.py  service.py  test_mailbox.py
mail_actions/: auth.py  cli.py  ruleengine.py  ruleparser.py
mail_actions/gmail/: mailbox.py  service.py
tests/: test_auth.py  test_mailbox.py  test_ruleengine.py  test_ruleparser.py
